Fixed location of name and dark mode mobile**

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ Header Page
   display: flex;
   flex-direction: column;
   position: relative;
-  margin-top: 48px;
+  margin-top: 12px;
 }
 .button {
   padding: 0.3em 1.2em;
